# MITs

./: .gitignore  LICENSE  Makefile  README.md  app.py  data.py  help_text.py  logo.py  mit.py  mits.py  pyproject.toml  themes.py
.github/workflows/: ci.yml
assets/demos/: README.md
scripts/: generate_demo_gifs.py  trim_asciicast_start.py
widgets/: detail_panel.py  modals.py  project_panel.py  sidebar.py  task_panel.py
