[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mit-tasks"
version = "0.1.0"
description = "Terminal task manager enforcing the 3 Most Important Tasks (MIT) method"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "mit contributors" }]
keywords = ["task", "productivity", "terminal", "tui", "mit", "textual", "todo"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Scheduling",
]
dependencies = ["textual>=8.0.0"]

[project.urls]
Homepage = "https://github.com/yourusername/mit"
Documentation = "https://github.com/yourusername/mit#readme"
Repository = "https://github.com/yourusername/mit"
Issues = "https://github.com/yourusername/mit/issues"

[project.scripts]
mit = "mit:main"

[tool.hatch.build.targets.wheel]
only-include = [
  "mit.py",
  "app.py",
  "data.py",
  "themes.py",
  "help_text.py",
  "widgets",
]

[tool.hatch.build.targets.sdist]
only-include = [
  "mit.py",
  "app.py",
  "data.py",
  "themes.py",
  "help_text.py",
  "widgets",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]
