[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mits-cli"
version = "0.1.0"
description = "Terminal task manager enforcing the 3 Most Important Tasks (MIT) method — MITs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "MITs contributors" }]
keywords = ["task", "productivity", "terminal", "tui", "mits", "MIT", "textual", "todo"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Scheduling",
]
dependencies = ["textual>=8.0.0,<9"]

[project.urls]
Homepage = "https://github.com/lahbibsemlali/MITs"
Documentation = "https://github.com/lahbibsemlali/MITs#readme"
Repository = "https://github.com/lahbibsemlali/MITs"
Issues = "https://github.com/lahbibsemlali/MITs/issues"

[project.scripts]
mits = "mits:main"

[tool.hatch.build.targets.wheel]
only-include = [
  "mits.py",
  "app.py",
  "data.py",
  "logo.py",
  "themes.py",
  "help_text.py",
  "widgets",
]

[tool.hatch.build.targets.sdist]
only-include = [
  "mits.py",
  "app.py",
  "data.py",
  "logo.py",
  "themes.py",
  "help_text.py",
  "widgets",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]
